2009-06-15  Jakub Jelinek  <jakub@redhat.com>

	* src/prelink.h (R_386_IRELATIVE, R_X86_64_IRELATIVE): Define
	if not defined.
	(struct PLArch): Add dest_addr argument to apply_conflict_rela
	hook.
	(struct prelink_conflict): Change used type from int to unsigned
	char, add ifunc field.
	(get_relocated_mem): Add dest_addr argument.
	* src/get.c (prelink_record_relocations): Handle lookups resolving
	to STT_GNU_IFUNC symbols.
	* src/conflict.c (get_relocated_mem): Add dest_addr argument, pass
	it through to the apply_conflict_rela hook.  Fail if
	apply_conflict_rela hook failed.
	(prelink_build_conflicts): Build conflicts even in the executable,
	and for libraries even if no conflicts were reported by the dynamic
	linker.  In the executable ignore any unused conflicts except for
	ifunc conflicts.  Adjust get_relocated_mem callers.
	* src/cxx.c (remove_redundant_cxx_conflicts): Adjust
	get_relocated_mem callers.
	* arch-alpha.c (alpha_apply_conflict_rela): Add dest_addr argument.
	(alpha_prelink_conflict_rela): Return early if info->dso == dso.
	* arch-arm.c (arm_apply_conflict_rela): Add dest_addr argument.
	(arm_prelink_conflict_rel, arm_prelink_conflict_rela): Return early
	if info->dso == dso.
	* arch-cris.c (cris_apply_conflict_rela): Add dest_addr argument.
	(cris_prelink_conflict_rela): Return early if info->dso == dso.
	* arch-ia64.c (ia64_apply_conflict_rela): Add dest_addr argument.
	(ia64_prelink_conflict_rela): Return early if info->dso == dso.
	* arch-ppc.c (ppc_apply_conflict_rela): Add dest_addr argument.
	(ppc_prelink_conflict_rela): Return early if info->dso == dso.
	* arch-ppc64.c (ppc64_apply_conflict_rela): Add dest_addr argument.
	(ppc64_prelink_conflict_rela): Return early if info->dso == dso.
	* arch-s390.c (s390_apply_conflict_rela): Add dest_addr argument.
	(s390_prelink_conflict_rela): Return early if info->dso == dso.
	* arch-s390x.c (s390x_apply_conflict_rela): Add dest_addr argument.